<resources>
    <string name="app_name">SchoolProject</string>
    <string name="learn_button_text">התחל למידה</string>
    <string name="test_button_text">התחל מבחן</string>
    <string name="settings_button_text">הגדרות</string>
    <string name="learn_activity_text_view_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat rhoncus eros, ac imperdiet eros tempus a. Donec viverra eleifend ante. Phasellus facilisis ex at lectus porttitor pellentesque. Integer iaculis nisi eu sodales rhoncus. Duis quis efficitur sem, non suscipit ligula. Morbi a justo lobortis, pretium nisl non, euismod massa. Donec sollicitudin ex justo.</string>
    <string name="chapter_one_button_text">פרק א\' - הבנת החוק</string>
    <string name="chapter_two_button_text">פרק ב\' - כללי הנהיגה</string>
    <string name="chapter_three_button_text">פרק ג\' - נהיגה בתנאים מיוחדים</string>
    <string name="chapter_four_button_text">פרק ד\' - תמרורים</string>
    <string name="start_test_subject_text">התחל מבחן</string>
    <string name="loren_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat rhoncus eros, ac imperdiet eros tempus a. Donec viverra eleifend ante. Phasellus facilisis ex at lectus porttitor pellentesque. Integer iaculis nisi eu sodales rhoncus. Duis quis efficitur sem, non suscipit ligula. Morbi a justo lobortis, pretium nisl non, euismod massa. Donec sollicitudin ex justo.</string>
    <string name="simple_headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="next_button_text">הבא</string>
    <string name="previous_button_text">הקודם</string>
    <string name="demo_question">מהו הגיל המינימלי הדרוש לקבלת היתר לנהיגה ברכב מדרגה B?</string>
    <string name="demo_answer">מגיל 17 ומעלה ואם בעל סבתא בלי רישיון מעל גיל 18</string>



</resources>
