<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChapterPickActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/learn_activity_text_view_text"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chapter_one_button"
        android:text="@string/chapter_one_button_text"
        android:layout_weight="1"
        android:onClick="openSubjectList"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chapter_two_button"
        android:text="@string/chapter_two_button_text"
        android:layout_weight="1"
        android:onClick="openSubjectList"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chapter_three_button"
        android:text="@string/chapter_three_button_text"
        android:layout_weight="1"
        android:onClick="openSubjectList"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chapter_four_button"
        android:text="@string/chapter_four_button_text"
        android:layout_weight="1"
        android:onClick="openSubjectList"/>

</LinearLayout>
