<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.emanuelcatoui.me.schoolproject.SubjectTestActivity"
    android:layoutDirection="rtl">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_question"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:layout_margin="30dp"
        android:layout_gravity="end"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_answer"
            android:id="@+id/answer_one_radio"
            android:padding="20dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_answer"
            android:id="@+id/answer_two_radio"
            android:padding="20dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_answer"
            android:id="@+id/answer_three_radio"
            android:padding="20dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_answer"
            android:id="@+id/answer_four_radio"
            android:padding="20dp"/>
    </RadioGroup>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_progress_bar"
        android:progress="0"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_button_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/previous_question_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/next_question_button"/>
    </RelativeLayout>

</LinearLayout>
