<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context="com.emanuelcatoui.me.schoolproject.SubjectLearnActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_text_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_subject_learn"
        android:src="@drawable/image_one"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/material_subject_learn"
        android:layout_gravity="center_horizontal"
        android:text="@string/loren_ipsum_text"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:maxLines="12"
        android:editable="false"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:scrollbarFadeDuration="@android:integer/config_longAnimTime"
        android:verticalScrollbarPosition="right"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_button_text"
            android:id="@+id/previous_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            android:id="@+id/next_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>


</LinearLayout>
